Fix navbar header padding on mobile

--- a/docs/en/css/iconem-studio.css
+++ b/docs/en/css/iconem-studio.css
@@ -359,7 +359,7 @@ circle:hover,
 }
 
 .navbar-default .navbar-header {
-    padding: 0px 15px;
+    /* padding: 0px 15px; */
 }
 
 .navbar-default .navbar-header .navbar-brand {
